[gd_scene load_steps=4 format=3 uid="uid://c41smqs5dtjl2"]

[ext_resource type="Texture2D" uid="uid://bmpimw27jgq55" path="res://assets/Environment/Other/heart_full.png" id="1_iekdx"]
[ext_resource type="Script" path="res://scenes/user_interface/healthbar.gd" id="1_xst1x"]
[ext_resource type="Texture2D" uid="uid://b0ieaxm46cmim" path="res://assets/Environment/Other/hearth_empty.png" id="3_v1qae"]

[node name="healthbar" type="Node2D"]
script = ExtResource("1_xst1x")
heart_full = ExtResource("1_iekdx")
heart_empty = ExtResource("3_v1qae")

[node name="heart_1" type="Sprite2D" parent="."]
position = Vector2(21, 18)
scale = Vector2(3, 3)
texture = ExtResource("1_iekdx")

[node name="heart_2" type="Sprite2D" parent="."]
position = Vector2(68, 18)
scale = Vector2(3, 3)
texture = ExtResource("1_iekdx")

[node name="heart_3" type="Sprite2D" parent="."]
position = Vector2(116, 18)
scale = Vector2(3, 3)
texture = ExtResource("1_iekdx")

[node name="heart_4" type="Sprite2D" parent="."]
position = Vector2(164, 18)
scale = Vector2(3, 3)
texture = ExtResource("1_iekdx")

[node name="heart_5" type="Sprite2D" parent="."]
position = Vector2(212, 20)
scale = Vector2(3, 3.282)
texture = ExtResource("1_iekdx")
